# mcp-crawl4ai-rag

./: .crush.json  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  DEEPINFRA_SETUP.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  build-and-push.bat  build-and-push.sh  crawled_pages_1024.sql  cursor_untitled_chat.md  debug_analysis_test.py  debug_env.py  debug_neo4j_test.py  debug_thread_test.py  digest.txt  docker-compose.full-stack.yml  docker-compose.with-ollama.yml  docker-compose.yaml  docker-compose.yml  integration_test.py  llms.txt  performance_benchmark.py  prompt.md  pyproject.toml  pytest.ini  qdrant-client.txt  run_hybrid_tests.py  run_server.py  setup.bat  shotgun_context_architect.txt  shotgun_prompt_2025-08-08_134902.md  shotgun_response_20250625_003309.txt  sitemap_urls.txt  start.bat  test_fails.md  (+1 more)
.crush/: crush.db-shm  crush.db-wal
.cursor/: mcp.json
.serena/: project.yml
PRPs/: concurrent-parallel-server-architecture.md  crossencoder-gpu-acceleration.md  deepinfra-qwen3-embedding-integration.md  embedding-cache-redis.md  explicit-fallback-model-configuration.md  flexible-api-model-configuration.md  github-indexing-optimization-prd.md  github_indexing_unification.md  implement-fallback-model-api-configuration.md  intelligent-file-separation-prd.md  intelligent-file-separation.md  mcp-dashboard-implementation.md  mcp-dashboard-prd.md  mcp-tools-timeout-configuration-spec.md  mdx-support-implementation-prd.md  mdx-support-implementation.md  parse-github-repository-removal-prd.md  parse-github-repository-removal-spec.md  qdrant-native-hybrid-search-sparse-vectors.md  remove-legacy-model-configuration.md  remove-openai-default-model-redundancy.md  repository-indexing-pipeline-optimization.md  reranking-optimization-enhancement.md  smart-crawl-github.md  smart_crawl_github_multi_file_support.md  spa-crawling-enhancement.md  strict-prefix-url-crawling.md  supabase-to-qdrant-migration.md  tree_sitter_multi_language_integration.md  unified_repository_processing.md
SPEC_PRP/: connectionreset-fix.md  github-processor-refactoring.md
backups/: code_examples_backup_20250802_234528.json
knowledge_graphs/: __init__.py  ai_hallucination_detector.py  ai_script_analyzer.py  build_grammars.py  demo_script.py  hallucination_reporter.py  knowledge_graph_validator.py  language_parser.py  parse_repo_into_neo4j.py  parser_factory.py  query_knowledge_graph.py  simple_fallback_parser.py  test_script.py.backup  tree_sitter_parser.py
scripts/: README.md  benchmark_embedding_cache.py  build_grammars.py  clean_qdrant.py  cleanup.bat  cleanup.sh  cleanup_databases.py  debug_method_count.py  define_qdrant_dimensions.py  fix_qdrant_dimensions.py  query_knowledge_graph.py  setup.bat  start.bat
src/: __init__.py  __main__.py  config.py  crawl4ai_mcp.py  device_manager.py  embedding_cache.py  embedding_config.py  event_loop_fix.py  qdrant_wrapper.py  sparse_vector_types.py  utils.py  utils.py.backup
tests/: README.md  __init__.py  conftest.py  integration_test.py  integration_test_hybrid.py  performance_benchmark.py  performance_benchmark_hybrid.py  run_hybrid_tests.py  test_backward_compatibility.py  (+42 more)
(+223 files in other folders)
