[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "fastmcp>=2.0.0",
    "mcp>=1.7.1",
    "supabase==2.15.1",
    "openai==1.71.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=4.1.0",
    "neo4j>=5.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.2.0",
    "pytest-env>=0.8.0",
    "responses>=0.23.0",
]
